resolve conflicts